helm/opensearch/network-policy.yaml
# --------------------------------------------------------------------
# Copyright (c) 2023, WSO2 LLC. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rules-opensearch
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opensearch
  policyTypes:
  - Egress
  - Ingress
  egress:
  # Allow egress for leader election between OpenSearch nodes
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: choreo-observability
      podSelector:
        matchLabels:
          app.kubernetes.io/name: opensearch
    ports:
    - port: 9300
      protocol: TCP

  # Allow K8s DNS resolution
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP

  ingress:
  # Allow ingress for leader election between OpenSearch nodes
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: choreo-observability
      podSelector:
        matchLabels:
          app.kubernetes.io/name: opensearch
    ports:
    - port: 9300
      protocol: TCP

  - from:
    # Allow ingress from the choreo-logging component. It queries logs from openSearch and send responds to the console
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: choreo-observability
      podSelector:
        matchLabels:
          choreo.component: loggingapi

    # Allow ingress from fluent-bit to receive logs
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: choreo-observability
      podSelector:
        matchLabels:
          app.kubernetes.io/name: fluent-bit
    ports:
    - port: 9200
      protocol: TCP
